# sqla-utils

./: .gitignore  CHANGELOG.md  NEWS.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: test-and-lint.yml
sqla_utils/: __init__.py  base.py  builder.py  exc.py  session.py  split_sql.py  test.py  transaction.py  types.py
test_sql/: test-tables.sql
test_sqla_utils/: test_test.py  test_transaction.py
