[project]
name = "sqla-utils"
version = "0.7.1.dev"
description = "Opinionated utilities for working with SQLAlchemy"
readme = "README.md"
keywords = ["sqlalchemy", "orm"]
authors = [{ name = "Sebastian Rittau", email = "srittau@rittau.biz" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = ["SQLAlchemy >= 1.4, < 3"]

[dependency-groups]
dev = [
    "mypy >= 2.1.0",
    "pytest",
    "ruff>=0.15.13",
]

[project.urls]
Homepage = "https://github.com/srittau/sqla-utils"
Repository = "https://github.com/srittau/sqla-utils"

[tool.uv]
exclude-newer = "5 days"

[tool.uv.build-backend]
module-root = ""
source-include = ["CHANGELOG.md"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# B006: Do not use mutable default arguments
# E501: Line too long (handled by the autoformatter)
ignore = ["B006", "E501"]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
strict_equality = true
strict_equality_for_none = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"
