[project]
name = "sqla-utils"
version = "0.8.1"
description = "Opinionated utilities for working with SQLAlchemy"
readme = "README.md"
keywords = ["sqlalchemy", "orm"]
authors = [{ name = "Sebastian Rittau", email = "sebastian.rittau@zfutura.de" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = ["SQLAlchemy >= 2.0, < 3", "typing-extensions>=4.15.0"]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=9.0.0", "ruff>=0.15.13"]

[project.urls]
Homepage = "https://github.com/srittau/sqla-utils"
Repository = "https://github.com/srittau/sqla-utils"

[tool.uv]
exclude-newer = "5 days"

[tool.uv.build-backend]
module-root = ""
source-include = ["CHANGELOG.md"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Missing trailing comma (handled by the autoformatter)
    "D105",    # Missing docstring in magic method (often not necessary)
    "D202",    # No blank lines allowed after function docstring (often less readable)
    "D203",    # Incompatible with D211, and not recommended anymore
    "D213",    # Incompatible with D212
    "E501",    # Line too long (handled by the autoformatter)
    "EM101",   # Exception must not use a string literal (nonsense rule)
    "EM102",   # Exception must not use an f-string (nonsense rule)
    "PERF203", # try within a loop (often necessary)
    "RET505",  # Unnecessary else after a return statement (often more readable when returning from all branches)
    "S101",    # Use of assert detected (assert is often useful, and necessary in tests)
    "TC001",   # Move import into type-checking block (often less readable)
    "TC002",
    "TC003",
    "TRY003",  # Long message outside exception class (nonsense rule)
]
flake8-builtins.ignorelist = [
    "id", # "id" is a commonly useful, builtin is rarely used
]

[tool.ruff.lint.per-file-ignores]
"test_sqla_utils/**.py" = ["D10"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions", "_typeshed"]

[tool.pytest]
filterwarnings = ["error"]

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
strict_equality = true
strict_equality_for_none = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"
