[metadata]
name = sqla-utils
version = 0.2.2
description = Opinionated utilities for working with SQLAlchemy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sqlalchemy, orm
license = MIT
license_files = LICENSE.txt
url = https://github.com/srittau/sqla-utils
author = Sebastian Rittau
platforms = any
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Typing :: Typed

[options]
packages = sqla_utils
python_version = >= 3.8
install_requires =
    SQLAlchemy >= 1.3, < 2

[options.extras_require]
test =
    pytest
format =
    black==21.6b0
    isort>=5.9.2,<6
lint =
    mypy==0.910
    flake8>=3.9.2,<3.10

[options.package_data]
* = py.typed

[flake8]
# E203: whitespace before ':' (black compatibility)
# W503: line break before binary operator (black compatibility)
ignore = E203, W503
